# Mesher3DForSJTU

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  mesher3d_core.cpp  mesher3d_io.cpp  mesher3d_io.h  out3d_out.mesh  out3d_out.value  out3d_out.vtk
examples/: coupledMesh.mesh  cp.mesh  cpcb.mesh  cube.poly  cubeshell.poly  out3d.mesh  outcpcb.mesh  testout.mesh
examples/borderCase/: cp(1).mesh
examples/bug0411/: disloc3d.mesh  dislocation.mesh  dislocation.o.vtk
examples/bugCase/: cp.mesh  out3d.mesh
examples/convex_hull/: disloc2d.mesh  out3d.mesh  out3d.mesh.vtk
examples/hole/: out3d.mesh  out3d.mesh.vtk  out3d.mesh2vtk.vtk  test_dihole.mesh
examples/periodic/: dislocation.mesh  dislocation_out.vtk  out3d.mesh  out3d.mesh.vtk
examples/periodic2/: disloc_ref_buf.mesh  disloc_ref_buf.o.vtk  disloc_ref_buf_new.mesh  disloc_ref_buf_new.o.vtk
examples/periodic3/: disloc_ref_A.mesh  udisl_A.json
examples/refine_case/: simple3d.mesh  simple3d.remesh  test3d.mesh  test3d.remesh  test3d.value  test3d.vtk  test3d_out.mesh  test3d_out.value
src/: GroupEntities.h  MeshRefiner.cpp  MeshRefiner.h  MeshSwapper.cpp  MeshSwapper.h  SpatialSearcher.cpp  SpatialSearcher.h  SubEntities.h  aabbox.h  common.h  edge.cpp  edge.h  hashEdge.cpp  hashEdge.h  hashFacet.cpp  hashFacet.h  main.cpp  mesh.cpp  mesh.h  mesher3d_core.cpp  mesher3d_core.h  mesher3d_io.cpp  mesher3d_io.h  node.h  quality.h  sphere.cpp  sphere.h  surfaceMesh.cpp  surfaceMesh.h  tetgen.cxx  tetgen.h  tetrahedron.h  triangle.c  triangle.h  vector3d.cpp  vector3d.h
(+23 files in other folders)
